# cimdea

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cimdea.toml
.github/workflows/: rust.yml
benches/: tabulate_simple_request_benchmark.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/abacus/: all.html  enum.CliCommand.html  fn.abacus_request_from_str.html  fn.get_from_stdin.html  fn.main.html  index.html  sidebar-items.js  struct.CliRequest.html  struct.RequestArgs.html  struct.TabArgs.html
doc/ahash/: all.html  index.html  struct.AHasher.html
doc/alloc_no_stdlib/: struct.AllocatedStackMemory.html
doc/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
doc/arrow/: all.html  index.html  macro.downcast_dictionary_array.html  macro.downcast_primitive_array.html  sidebar-items.js
doc/arrow_arith/: all.html  index.html
doc/arrow_array/: all.html  index.html  macro.downcast_dictionary_array.html  macro.downcast_integer.html  macro.downcast_primitive.html  macro.downcast_primitive_array.html  macro.downcast_run_array.html  macro.downcast_run_end_index.html  macro.downcast_temporal.html  macro.downcast_temporal_array.html  struct.RecordBatch.html  struct.RecordBatchIterator.html  struct.RecordBatchOptions.html  struct.Scalar.html  trait.ArrowNativeTypeOp.html  trait.ArrowNumericType.html  trait.Datum.html  trait.RecordBatchReader.html  trait.RecordBatchWriter.html
doc/arrow_buffer/: all.html  index.html  struct.i256.html  trait.ArrowNativeType.html  trait.ToByteSlice.html
doc/arrow_cast/: all.html  index.html
doc/arrow_data/: all.html  enum.BufferSpec.html  (+10 more)
docs/: ask-nl-tabulation.md
src/: app_config.rs  conventions.rs  data_version.rs  defaults.rs  deployment.rs  fixed_width.rs  input_schema_tabulation.rs  ipums_data_model.rs  ipums_metadata_model.rs  json_schema.rs  layout.rs  lib.rs  llm.rs  main.rs  mderror.rs  nl_tabulation.rs  parquet_metadata.rs  query_gen.rs  remote.rs  request.rs  server_status.rs  tabulate.rs
tests/: abacus_cli.rs  test_abacus_cli.rs  test_nl_tabulation.rs  test_serialize_tabulation.rs  test_tabulate.rs
(+7723 files in other folders)
