[package]
name = "cimdea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "0.10.1", features = ["bundled"]}
parquet = "51.0.0"
sql-builder="3.1"
interner="*"
compressed_string = "*"
csv = "1.1"
extended = "*"
ascii = "*"
bstr = "1.7.0"
encoding = "*"
serde ={version =  "1.0.201", features=["derive"]}
serde_json = "1.0.117"
clap = {version="4.0.0", features=["derive"]}

