[package]
name = "cimdea"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "1.3.0", features = ["bundled"]}
parquet = "55.1.0"
sql-builder="3.1"
interner="*"
compressed_string = "*"
csv = "1.1"
extended = "*"
ascii = "*"
bstr = "1.7.0"
encoding = "*"
serde ={version =  "1.0.201", features=["derive"]}
serde_json = "1.0.117"
clap = {version="4.0.0", features=["derive"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
assert_cmd = "2.0.16"
predicates = "3.1.2"

[lib]
name = "cimdea"
path = "src/lib.rs"

[[bin]]
name = "abacus"
path = "src/bin/abacus.rs"

[[bench]]
name = "tabulate_simple_request_benchmark"
harness = false
